--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@splinetool/react-spline": "^2.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "heroicons": "^2.1.3",
