--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
+    "react-icons": "^5.2.1",
     "spline": "^0.0.0",
     "zod": "^3.22.4"
   }
