--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "react-icons": "^5.1.0",
+    "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5"
