--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@splinetool/react-spline": "^2.2.6",
     "@weavy/uikit-react": "^22.2.1",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "heroicons": "^2.1.3",
